--- a/webapp/app/plugins/pluginpanel.html
+++ b/webapp/app/plugins/pluginpanel.html
@@ -8,6 +8,14 @@
      ng-show="isPinboardVisible"
      ng-include src="'partials/main/thPinboardPanel.html'">
 </div>
+<div id="pinboard-resizer"
+     ng-show="isPinboardVisible"
+     resizer="horizontal"
+     resizer-height="6"
+     resizer-top="#pinboard-panel"
+     resizer-bottom="#bottom-panel-content"
+     resizer-container="#bottom-panel">
+</div>
 <div id="bottom-panel-content">
   <div id="bottom-left-panel">
     <div id="bottom-left-top">
