bug 1072346 - pinboard no longer contained in bottom-panel
the resizer directive seems to bleed values between being used in
multiple places.  So I’m still working on how to get them independent.
Otherwise, this is nearly working right.

--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -28,11 +28,18 @@
                 <ng-view ></ng-view>
             </span>
         </div>
-        <div ng-controller="PluginCtrl"
-             id="bottom-panel"
-             ng-show="selectedJob"
-             ng-class="{'with-pinboard':isPinboardVisible}"
-             ng-include src="'plugins/pluginpanel.html'">
+        <div ng-controller="PluginCtrl">
+            <div ng-controller="PinboardCtrl"
+                 id="pinboard-panel"
+                 ng-show="isPinboardVisible"
+                 ng-include src="'partials/main/thPinboardPanel.html'">
+            </div>
+
+            <div id="bottom-panel"
+                 ng-show="selectedJob"
+                 ng-class="{'with-pinboard':isPinboardVisible}"
+                 ng-include src="'plugins/pluginpanel.html'">
+            </div>
         </div>
       </div>
 
